app/assets/stylesheets/layouts/posts-index.scss
.posts-container {
  margin: 10px;
  width: 280px;
  background: $white;
  border-radius: 2px;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);

  img {
    width: 100%;
    height: auto;
    border-bottom: 1px solid $border;
  }

  .posts-avatar {
    float: left;
    margin-right: 13px;

    img {
      width: 35px;
      border-radius: 50%;
    }
  }

  .posts-body {
    padding: 5px 10px 20px 10px;
  }

  .posts-content {
    @include font-size(13px);
    color: darken($border, 35%);
    margin-bottom: 12px;
  }

  .posts-name {
    @include font-size(14px);
    color: darken($border, 35%);
    font-weight: bold;

    a {
      color: darken($border, 35%);
    }
  }

  .posts-tags {
    @include font-size(13px);
    color: darken($border, 25%);
  }
}

